--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <meta name="keywords" content="">
 
     <link href="css/main.css" type="text/css" rel="stylesheet">	
-    
+    <link href="css/popup.css" type="text/css" rel="stylesheet">	
+
+    <script src="js/jquery.js" type="text/javascript"></script> 
+  
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.min.js"></script>	
+		<script type="text/javascript" src="js/jquery.reveal.js"></script>
+
+ 		<style type="text/css">
+			body { font-family: "HelveticaNeue","Helvetica-Neue", "Helvetica", "Arial", sans-serif; }
+			.big-link { display:block; margin-top: 20px; text-align: center; font-size: 15px; color: #06f; }
+		</style> 
+  
+  
     
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -28,14 +40,26 @@
 	   <a haref="#" class="myButton">vita</a>
 	   <a haref="#" class="myButton">portfolio</a> 
        <a haref="#" class="myButton">developer</a> 
-       <a haref="#" class="myButton">photo</a> 
+       <a haref="#" class="myButton">photographer</a> 
        <a haref="#" class="myButton">galery</a>	 		
 	</nav>
 </div>	
 
 <div class="inhalt">
-<hr class="linie">
-</div>
+	
+	
+
+
+		<a href="#" class="big-link" data-reveal-id="myModal" data-animation="none">
+			test
+		</a>
+
+		<div id="myModal" class="reveal-modal">
+			<h1>pegasus studios</h1>
+			<p>pegasus studios befasst sich in erster linie mit allem runt um die digitalen Medien.</p>
+			<a class="close-reveal-modal">&#215;</a>
+		</div>
+
 
 </div>
 	
