change the ground structure and re-create the layout to v2.0

--- a/index.html
+++ b/index.html
@@ -27,19 +27,6 @@
 	
 	
 <div class="main_div">	
-	
-<div class="logo">
-	<a href="#" class="big-link" data-reveal-id="myModal" data-animation="none">
-	  <img src="images/pegasus_studio_logo.png">
-	</a>
-</div>	
-
-		<div id="myModal" class="reveal-modal">
-			<h1>pegasus studios</h1>
-			<p>pegasus studios befasst sich in erster linie mit allem runt um die digitalen Medien.</p>
-			<a class="close-reveal-modal">&#215;</a>
-		</div>
-
 
 <div class="nav">
 	<nav>
@@ -49,17 +36,45 @@
        <a haref="#" class="myButton">photographer</a> 
        <a haref="#" class="myButton">galery</a>	 		
 	</nav>
+</div>
+
+<div class="logo">
+	<a href="#" class="big-link" data-reveal-id="myModal" data-animation="none">
+	  <img src="images/pegasus_studio_logo.png">
+	</a>
 </div>	
+
+
+<div class="main_div_inhalt">	
 
 <div class="inhalt">
 	
 	test
 
 
+</div>  <!-- ende inhalt -->
+
+
+
+
+</div>	<!-- ende main inhalt -->
+
+
+</div>  <!-- ende main  -->
+	
+	
+		<div id="myModal" class="reveal-modal">
+			<h1>pegasus studios</h1>
+			<p>pegasus studios befasst sich in erster linie mit allem runt um die digitalen Medien.</p>
+			<a class="close-reveal-modal">&#215;</a>
+		</div>	
+	
+	
+<div class="footer">
+	
 	
 
 
-</div>
-	
+</div>  <!-- ende footer -->
 </body>	
 </html>
