add one div continent and add the contact data in footer

--- a/index.html
+++ b/index.html
@@ -38,23 +38,22 @@
 	</nav>
 </div>
 
-<div class="logo">
-	<a href="#" class="big-link" data-reveal-id="myModal" data-animation="none">
-	  <img src="images/pegasus_studio_logo.png">
-	</a>
-</div>	
 
 
 <div class="main_div_inhalt">	
 
 <div class="inhalt">
 	
-	test
+	inhalt
 
 
 </div>  <!-- ende inhalt -->
 
+<div class="image_box">
+	
+	image_box
 
+</div>  <!-- ende image_box -->
 
 
 </div>	<!-- ende main inhalt -->
@@ -71,10 +70,41 @@
 	
 	
 <div class="footer">
+
+<div class="logo">
+	<a href="#" class="big-link" data-reveal-id="myModal" data-animation="none">
+	  <img src="images/pegasus_studio_logo.png">
+	</a>
+</div>		
+	
+<table border="0" cellpadding="10" cellspacing="10" align="center" valign="top">
+	<tr valign="top">
+		<td align="left">
+			Michél Streblow<br>
+			Mediengestalter Digital- Printmedien<br>
+			(Fachrichting NonPrint Operating)<br>
+			Am Tierpark 58<br>
+			10319 Berlin	
+		</td>
+		<td width="20"></td>
+		<td align="left">
+			<b>eMail:</b> info@pegasus-studios.de<br>
+			<b>support:</b> support@pegasus-studios.com<br>
+			<b>support-Tool:</b> <a class="link" href="http://support.pegasus-studios.com" target="_blank">support.pegasus-studios.com</a><br>
+			<b>Interface:</b> <a class="link" href="http://www.alicorn.de" target="_blank">alicorn</a><br>
+			<b>Dev-Interface:</b> <a class="link" href="http://dev.alicorn.de" target="_blank">alicorn Dev</a>
+		</td>
+		<td width="20"></td>
+		<td align="left">
+			</b>Telefon:</b> +49 (0)173 632 2317<br>
+			</b>Mobile:</b> +49 (0)173 632 2317
+		</td>		
+	</tr>
+</table>
+
 	
 	
-
-
 </div>  <!-- ende footer -->
+
 </body>	
 </html>
