--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 
 <div class="image_box">
 	
-	image_box
-
+ <img src="./gallerie/1.jpg" class="immage">
 </div>  <!-- ende image_box -->
 
 
@@ -71,13 +70,16 @@
 	
 <div class="footer">
 
+<!--
 <div class="logo">
 	<a href="#" class="big-link" data-reveal-id="myModal" data-animation="none">
 	  <img src="images/pegasus_studio_logo.png">
 	</a>
 </div>		
+-->	
 	
-<table border="0" cellpadding="10" cellspacing="10" align="center" valign="top">
+	
+<table border="0" cellpadding="5" cellspacing="10" align="center" valign="top">
 	<tr valign="top">
 		<td align="left">
 			Michél Streblow<br>
@@ -86,7 +88,7 @@
 			Am Tierpark 58<br>
 			10319 Berlin	
 		</td>
-		<td width="20"></td>
+		<td width="5"></td>
 		<td align="left">
 			<b>eMail:</b> info@pegasus-studios.de<br>
 			<b>support:</b> support@pegasus-studios.com<br>
@@ -94,10 +96,15 @@
 			<b>Interface:</b> <a class="link" href="http://www.alicorn.de" target="_blank">alicorn</a><br>
 			<b>Dev-Interface:</b> <a class="link" href="http://dev.alicorn.de" target="_blank">alicorn Dev</a>
 		</td>
-		<td width="20"></td>
+		<td width="5"></td>
 		<td align="left">
-			</b>Telefon:</b> +49 (0)173 632 2317<br>
-			</b>Mobile:</b> +49 (0)173 632 2317
+			<b>Telefon:</b> +49 (0)173 632 2317<br>
+			<b>Mobile:</b> +49 (0)173 632 2317
+		</td>
+		<td width="5"></td>		
+		<td align="left">
+			<a href="#" target="_self" class="link">kontakt</a><br>
+			<a href="#" target="_self" class="link">impressum</a>
 		</td>		
 	</tr>
 </table>
