fix the error in nag link

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
 <div class="nav">
 	<nav>
-	   <a haref="#" class="myButton">vita</a>
-	   <a haref="#" class="myButton">portfolio</a> 
-       <a haref="#" class="myButton">developer</a> 
-       <a haref="#" class="myButton">photographer</a> 
-       <a haref="#" class="myButton">galery</a>	 		
+	   <a href="hh.html" class="myButton">vita</a>
+	   <a href="#" class="myButton">portfolio</a> 
+       <a href="#" class="myButton">developer</a> 
+       <a href="#" class="myButton">photographer</a> 
+       <a href="#" class="myButton">galery</a>	 		
 	</nav>
 </div>
 
@@ -51,7 +51,7 @@
 
 <div class="image_box">
 	
- <img src="./gallerie/1.jpg" class="immage">
+
 </div>  <!-- ende image_box -->
 
 
