- chafe the description  / keywords in meta section for google - change the linkadress

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>pegasus studios [producer of digital media]</title>
-    <meta name="description" content="">
+	<title>pegasus studios [producer of digital media] - Startseite</title>
+    <meta name="description" content="pegasus-studios beschäftigt sich mit allem rund um die Digitale Welt. Hierbei werden die bereiche Fotoshoting und Dehen von Filmen abgedeckt. In einem anderen bereich der werden die programmiereischen sachen abgefertigt. Die erstellten Bilder und Filme können so im Internet gleich vermacketet werden.">
     <meta name="author" content="Michél Streblow">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Webdesign,Dev,Berlin,Oranienburg,Michel Streblow,Streblow,Michel,Michél,Michél Streblow,alicorn,pegasus studios,pegasus,pegasus-studios.de,programmierung,developer,salesforce,administrator,systemadministrator,erstellen von internetseiten,werbung berlin,werbung,Hohenbruch,beetz,sommerfeld,Movie,Cuter,film regisseur,texter,autor,theater,theater Varianta,theatervarianta.de,spandau berlin,Liebenwalde,groupon">
 
     <link href="css/main.css" type="text/css" rel="stylesheet">	
     <link href="css/popup.css" type="text/css" rel="stylesheet">	
@@ -103,8 +103,8 @@
 		</td>
 		<td width="5"></td>		
 		<td align="left">
-			<a href="#" target="_self" class="link">kontakt</a><br>
-			<a href="#" target="_self" class="link">impressum</a>
+			<a href="kontakt.html" target="_self" class="link">kontakt</a><br>
+			<a href="impressum.html" target="_self" class="link">impressum</a>
 		</td>		
 	</tr>
 </table>
