- add the Impressum Text and change the navigation - add the Vita Text and change the navigation - change the navigation in index file

--- a/impressum.html
+++ b/impressum.html
@@ -30,11 +30,10 @@
 
 <div class="nav">
 	<nav>
-	   <a href="vita.html" class="myButton">vita</a>
+	   <a href="vita.html" class="myButton">mein Leben</a>
 	   <a href="#" class="myButton">portfolio</a> 
-       <a href="#" class="myButton">developer</a> 
-       <a href="#" class="myButton">photographer</a> 
-       <a href="#" class="myButton">galery</a>	 		
+       <a href="#" class="myButton">Entwickler</a> 
+       <a href="#" class="myButton">Fotograf</a>  		
 	</nav>
 </div>
 
@@ -44,12 +43,52 @@
 
 <div class="inhalt">
 	
-	impressum
-
+<table border="0" cellpadding="2" cellspacing="0" width="400">
+	<tr>
+		<td colspan="3"><h2>Impressum</h2></td>
+	</tr>
+	<tr valign="top" align="left">
+		<td>Name:</td>
+		<td width="10"></td>
+		<td>Michél Streblow</td>
+	</tr>
+	<tr valign="top" align="left">
+		<td>Adresse:</td>
+		<td width="10"></td>
+		<td>Am Tierpark 58, 10319 Berlin</td>
+	</tr>
+	<tr height="20">
+		<td></td>
+		<td width="10"></td>
+		<td></td>
+	</tr>
+	<tr valign="top" align="left">
+		<td>Telefon:</td>
+		<td width="10"></td>
+		<td>+49 (0) 1736322317</td>
+	</tr>
+	<tr valign="top" align="left">
+		<td>eMail:</td>
+		<td width="10"></td>
+		<td>info@pegasus-studios.de</td>
+	</tr>
+</table>
 
 </div>  <!-- ende inhalt -->
 
 <div class="image_box">
+	
+<table border="0" cellpadding="2" cellspacing="0">
+	<tr>
+		<td><h2>Haftungshinweis</h2></td>
+	</tr>
+	<tr valign="top" align="left">
+		<td>
+		  Trotz grüntlicher kontrolle des Inhaltes der Internetseite, übernehmen wir keine Haftung für die Inhalte externer Links.
+		  Die Betreiber der Verlinkten Seite (externe Links) sind für ihren Inhalt ausschlißlich selbst verantwortlich.
+		</td>
+	</tr>
+</table>	
 	
 
 </div>  <!-- ende image_box -->
@@ -103,7 +142,6 @@
 		</td>
 		<td width="5"></td>		
 		<td align="left">
-			<a href="kontakt.html" target="_self" class="link">kontakt</a><br>
 			<a href="impressum.html" target="_self" class="link">impressum</a>
 		</td>		
 	</tr>
