--- a/vita.html
+++ b/vita.html
@@ -30,11 +30,10 @@
 
 <div class="nav">
 	<nav>
-	   <a href="vita.html" class="myButton">vita</a>
+	   <a href="vita.html" class="myButton">mein Leben</a>
 	   <a href="#" class="myButton">portfolio</a> 
-       <a href="#" class="myButton">developer</a> 
-       <a href="#" class="myButton">photographer</a> 
-       <a href="#" class="myButton">galery</a>	 		
+       <a href="#" class="myButton">Entwickler</a> 
+       <a href="#" class="myButton">Fotograf</a>  		
 	</nav>
 </div>
 
@@ -115,6 +114,15 @@
 
 <div class="image_box">
 	
+Als kleiner Junge fasziniert von Technik und Natur, zwei dige die unterschiedlicher nicht sein können, wuchs ich auf eine Bauernhof und Dorf in<br>
+den Tiefen von Bradenburg auf. Das kleine verträumte Dorf (Hohenbruch) bietet jede menge Stoff um die Fantasie zu beflügeln, so entaden über<br>
+die Jahre Leidensachften zur Natur und Technik.<br><br>
+
+Heute nach vielen Jahren Arbeite ich als Systemadministrator bei einer Internationalen Firma in Berlin. Meine leidenschaft zur Fotografie und Film,<br>
+Natur und Technik lebe ich in meiner Freizeit. Zeit ist hier ein wichtiger Faktor, denn man benötigt sehr viel Zeit.<br><br>
+
+<a href="#" target="_self">Lebenslauf</a>
+
 
 </div>  <!-- ende image_box -->
 
@@ -167,7 +175,6 @@
 		</td>
 		<td width="5"></td>		
 		<td align="left">
-			<a href="kontakt.html" target="_self" class="link">kontakt</a><br>
 			<a href="impressum.html" target="_self" class="link">impressum</a>
 		</td>		
 	</tr>
