--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 
 <div class="nav">
 	<nav>
-	   <a href="vita.html" class="myButton">vita</a>
+	   <a href="vita.html" class="myButton">mein Leben</a>
 	   <a href="#" class="myButton">portfolio</a> 
-       <a href="#" class="myButton">developer</a> 
-       <a href="#" class="myButton">photographer</a> 
-       <a href="#" class="myButton">galery</a>	 		
+       <a href="#" class="myButton">Entwickler</a> 
+       <a href="#" class="myButton">Fotograf</a>  		
 	</nav>
 </div>
 
@@ -103,7 +102,6 @@
 		</td>
 		<td width="5"></td>		
 		<td align="left">
-			<a href="kontakt.html" target="_self" class="link">kontakt</a><br>
 			<a href="impressum.html" target="_self" class="link">impressum</a>
 		</td>		
 	</tr>
