- add the text on index site (startsite) - add pegasus studios logo

--- a/index.html
+++ b/index.html
@@ -42,10 +42,31 @@
 <div class="main_div_inhalt">	
 
 <div class="inhalt">
+<table border="0" cellpadding="2" cellspacing="5">	
+ <tr>
+  <td>
+	pegasus studios entstand aus einem Berufsschulprojeckt in der Berufschule während meiner Ausbildungszeit 2006.<br>
+	Hierzu mussten Konzeption zur gründung eines Unternehmens erstellt und ausgearbeitet werden.<br><br>
 	
-	inhalt
+	<li>Logodesign</li>
+	<li>Colormanagement</li>
+	<li>Strategie</li>
+	<li>Kostenstellen</li>
+	<li>Webseite</li>
+	<li>Flyer</li>
+	
+	<br><br>
+		<img src="images/pegasus_studio_logo.png" style="background-color:#aaa;">
+    <br><br>
+    
+	Der Name <b>pegasus</b> wurde hierbei gew&auml;hlt, da dieses gesch&ouml;pf aus der Griechen mythologie, klarheit,<br>
+	unschuldigkeit, reinheit, Wahrheit und Neutralität verk&ouml;pert. 
+	
 
-
+	
+  </td>		
+ </tr>
+</table>
 </div>  <!-- ende inhalt -->
 
 <div class="image_box">
