change and correcture from Text on vita site

--- a/vita.html
+++ b/vita.html
@@ -114,7 +114,7 @@
 
 <div class="image_box">
 	
-Als kleiner Junge fasziniert von Technik und Natur, zwei dige die unterschiedlicher nicht sein können, wuchs ich auf eine Bauernhof und Dorf in<br>
+Als kleiner Junge fasziniert von Technik und Natur, zwei dige die unterschiedlicher nicht sein können, wuchs er auf einen Bauernhof und Dorf in<br>
 den Tiefen von Bradenburg auf. Das kleine verträumte Dorf (Hohenbruch) bietet jede menge Stoff um die Fantasie zu beflügeln, so entaden über<br>
 die Jahre Leidensachften zur Natur und Technik.<br><br>
 
